# radar-simulator

./: CMakeLists.txt  README.md
core/: RadarCalculator.cpp  RadarCalculator.h  database.cpp  database.h
src/: mainwindow.cpp  mainwindow.h  targetdialog.cpp  targetdialog.h
ui/: mainwindow.ui
